- The Calendar iCal module has been hidden so you can't enable it and will be deleted completely in the next release. Use the new Date iCal module instead.
- The Calendar Items row plugin has been removed from the UI and will be deleted completely in the next release.


NEW FEATURES:
- Add the axis attribute to multiday calendar templates.
- Issue #1535346, Rework the calendar tab handling to get rid of custom tabs and add in a setting to track the current date.
- Issue #1535346 continuation, rework the current date tracking to use the new date_default_argument_alter hook.

There have been numerous problems with the way the tabs are working. They revert to the current day when you switch from one display to another. They are not translating correctly. Sometimes the paths are incorrect (i.e. if there are other arguments in the display). Some people don't want the tabs. Other people want additional tabs.

I am reworking them completely. I was originally trying to control them so we could do 'smart' switching to keep track of the current date as people clicked from one display to another. That wouldn't work with normal tabs, which can only display the default view. But overriding the normal menu items is fraught with problems and I finally figured out a way to keep track of the current date without controlling the tabs.

So I am getting rid of all the custom tab handling. You can create tabs on the calendar the way you create tabs on any other view -- with the menu setting in the display. That way you can totally control the tabs in your calendar. I am changing the calendar template to add the tabs to it.
