@@ -23,9 +23,9 @@
  * $max_date_formatted: The maximum date for this calendar in the format YYYY-MM-DD HH:MM:SS.
  * 
  */
-$axis = array();
+$header_ids = array();
 foreach ($day_names as $key => $value) {
-  $axis[$key] = $value['axis'];
+  $header_ids[$key] = $value['header_id'];
 }
 //dsm('Display: '. $display_type .': '. $min_date_formatted .' to '. $max_date_formatted);
 ?>
@@ -38,7 +38,7 @@ foreach ($day_names as $key => $value) {
     <tr>
       <th class="calendar-agenda-hour">&nbsp;</th>
       <?php foreach ($day_names as $cell): ?>
-        <th class="<?php print $cell['class']; ?>" axis="<?php print $cell['axis']; ?>">
+        <th class="<?php print $cell['class']; ?>" id="<?php print $cell['header_id']; ?>">
           <?php print $cell['data']; ?>
         </th>
       <?php endforeach; ?>
@@ -172,11 +172,11 @@ foreach ($day_names as $key => $value) {
         <tr>
           <?php for ($index = 0; $index < 8; $index++): ?>
           <?php if ($index == 0 ): ?>
-          <td class="first" axis="<?php print $axis[$index]; ?>">
+          <td class="first" headers="<?php print $header_ids[$index]; ?>">
           <?php elseif ($index == 7 ) : ?>
           <td class="last"">
           <?php else : ?>
-          <td axis="<?php print $axis[$index]; ?>">
+          <td headers="<?php print $header_ids[$index]; ?>">
           <?php endif; ?>
             <?php foreach ($start_times as $time_cnt => $start_time): ?>
               <?php 
